--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 .holder{
-    width:30%;margin:10px auto;border:1px;min-width:300px;min-height:300px;
+    width:30%;margin:10px auto;border:1px solid;min-width:300px;min-height:300px;padding:20px;border-radius: 10px;
 }
 .grade{
     height:30px;width:100%;font-weight:600;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
